--- a/segm/config.yml
+++ b/segm/config.yml
@@ -72,6 +72,13 @@ model:
     n_heads: 16
     n_layers: 24
     normalization: vit
+  vit_custom:
+    image_size: 384
+    patch_size: 64
+    d_model: 1024
+    n_heads: 16
+    n_layers: 24
+    normalization: vit
   vit_small_patch32_384:
     image_size: 384
     patch_size: 32
@@ -125,6 +132,15 @@ dataset:
     epochs: 216
     eval_freq: 4
     batch_size: 8
+    learning_rate: 0.01
+    im_size: 1024
+    crop_size: 768
+    window_size: 768
+    window_stride: 512
+  je:
+    epochs: 216
+    eval_freq: 4
+    batch_size: 4
     learning_rate: 0.01
     im_size: 1024
     crop_size: 768
